--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Advance Service Centre - Expert repair services for TVs, ACs, and Geysers. Quality care with years of experience and customer trust." />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Advance Service Centre" />
+    <meta property="og:description" content="Expert repair services for TVs, ACs, and Geysers. Book trusted professionals now." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.advanceservicecentre.com/" />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favivon.ico" />
+    <link rel="canonical" href="https://www.advanceservicecentre.com/" />
+
+    <title>Advance Service Centre</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Advance Service Centre",
+        "image": "https://www.advanceservicecentre.com/logo_square.png",
+        "telephone": "+91-7908365511",
+        "email": "sadhukhanrakesh1@gmail.com",
+        "address": {
+          "@type": "Tarakeswar",
+          "addressLocality": "Kolkata",
+          "addressRegion": "West Bengal",
+          "postalCode": "700001",
+          "addressCountry": "IN"
+        },
+        "url": "https://www.advanceservicecentre.com",
+        "openingHours": "Mo-Su 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/AdvanceServiceCentre",
+          "https://www.instagram.com/AdvanceServiceCentre"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
