--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="/og-image.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favivon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="canonical" href="https://www.advanceservicecentre.com/" />
 
     <title>Advance Service Centre</title>
