feat: Add Google site verification and tracking script to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Advance Service Centre - Expert repair services for TVs, ACs, and Geysers. Quality care with years of experience and customer trust." />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="AiPjW1BCFdeJaZycYQ6xjy5IqttfRBoVt1IdY4Csh6k" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Advance Service Centre" />
@@ -41,6 +42,16 @@
           "https://www.instagram.com/AdvanceServiceCentre"
         ]
       }
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SG3F1P7F64"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SG3F1P7F64');
     </script>
   
 <!-- Intersection Observer Polyfill for older browsers -->
