--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       gtag('config', 'G-SG3F1P7F64');
     </script>
   
-<!-- Intersection Observer Polyfill for older browsers -->
-<script>
-  if (!('IntersectionObserver' in window)) {
-    const script = document.createElement('script');
-    script.src = 'https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver';
-    document.head.appendChild(script);
-  }
-</script>
+    <!-- Intersection Observer Polyfill for older browsers -->
+    <script>
+      if (!('IntersectionObserver' in window)) {
+        const script = document.createElement('script');
+        script.src = 'https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver';
+        document.head.appendChild(script);
+      }
+    </script>
 
     <!-- Preload critical images -->
     <link rel="preload" as="image" href="/src/assets/hero-face-2.jpg" type="image/jpeg">
@@ -70,9 +70,23 @@
     <!-- Image optimization meta tags -->
     <meta name="image-loading" content="lazy">
     <meta name="decoding" content="async">
-    </head>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P3MDC337');</script>
+    <!-- End Google Tag Manager -->
+  </head>
+
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3MDC337"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
