--- a/index.html
+++ b/index.html
@@ -45,15 +45,28 @@
     </script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SG3F1P7F64"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-SG3F1P7F64"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-SG3F1P7F64');
+    </script> -->
+    
+    <!-- ABOVE TAG EXPIRED ON - 20 AUGUST, 2025 -->
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17436825510"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17436825510');
     </script>
-  
+        
     <!-- Intersection Observer Polyfill for older browsers -->
     <script>
       if (!('IntersectionObserver' in window)) {
