feat: Update Google Tag Manager script to replace expired tag and improve tracking

--- a/index.html
+++ b/index.html
@@ -45,19 +45,7 @@
     </script>
 
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-SG3F1P7F64"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-SG3F1P7F64');
-    </script> -->
-    
-    <!-- ABOVE TAG EXPIRED ON - 20 AUGUST, 2025 -->
-
-
-    <!-- Google tag (gtag.js) -->
+    <!-- UPDATED ON 2025-08-20 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17436825510"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
